--- a/index.html
+++ b/index.html
@@ -11,6 +11,92 @@
   </head>
   <body>
 
+    <!-- ********************INTESTAZIONE************* -->
+    <header>
+
+      <!-- NAV BAR -->
+      <nav id="navbar-header">
+
+        <nav id="nav-menu">
+
+        </nav>
+        <div id="logo">
+
+        </div>
+        <div id="opzioni">
+
+        </div>
+
+      </nav><!-- FINE NAV BAR -->
+
+      <!-- JUMBOTRON -->
+      <section>
+        <!-- div in absolute con icone -->
+        <div>
+
+        </div>
+        <!-- testo centrale -->
+        <div>
+
+        </div>
+      </section> <!--FINE JUMBOTRON-->
+
+    </header> <!--FINE INTESTAZIONE-->
+
+    <!--******************** PARTE CENTRALE ************* -->
+    <main>
+      <!-- sezione work colture -->
+      <section class="container">
+
+      </section>
+
+      <!-- sezione upgrade your life -->
+      <section class="container">
+
+      </section >
+
+      <!-- sezione courses con corousel-->
+      <section class="container">
+
+      </section >
+
+      <!-- sezione testimonials -->
+      <section class="container">
+
+      </section >
+
+      <!-- sezione free guide -->
+      <section class="container">
+
+      </section>
+
+      <!-- sezione post blog -->
+      <section class="container">
+
+      </section>
+
+      <!-- sezione subscribe -->
+      <section id="subscribe-form">
+
+      </section>
+
+    </main> <!--FINE PARTE CENTRALE-->
+
+    <!-- ******************* FOOTER ************** -->
+    <footer>
+
+        <!-- INDIRIZZO E SOCIAL -->
+      <div>
+
+      </div>
+
+      <!-- NAV BAR FOOTER -->
+      <nav id="navbar-footer">
+
+      </nav>
+
+    </footer>
+
 
 
     <script type="text/javascript" src="js/myscript.js">
