--- a/index.html
+++ b/index.html
@@ -55,36 +55,57 @@
     <main>
       <!-- sezione work colture -->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section>
 
       <!-- sezione upgrade your life -->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section >
 
       <!-- sezione courses con corousel-->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section >
 
       <!-- sezione testimonials -->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section >
 
       <!-- sezione free guide -->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section>
 
       <!-- sezione post blog -->
       <section class="container">
+        <div class="content-container">
+
+        </div>
 
       </section>
 
       <!-- sezione subscribe -->
       <section id="subscribe-form">
+        <div class="content-container">
+
+        </div>
 
       </section>
 
