jumbotron and first section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
       <!-- JUMBOTRON -->
       <section id="jumbotron">
         <!-- div in absolute con icone -->
-        <div>
+        <div id="icone-jumbo">
 
         </div>
         <!-- testo centrale -->
-        <div>
-
+        <div id="centro-jumbo">
+          <h2>Commence Business</h2>
+          <h1>Distant Mentoring Program</h1>
+          <button type="button" name="button">Download free guidebook <i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
         </div>
       </section> <!--FINE JUMBOTRON-->
 
@@ -54,9 +56,37 @@
     <!--******************** PARTE CENTRALE ************* -->
     <main>
       <!-- sezione work colture -->
-      <section class="container">
+      <section id="work-colture" class="container">
         <div class="content-container">
-
+          <div id="wc-left">
+            <div class="text-sections">
+              <h4>EVERYTHING IN <strong>MAXCOACH</strong></h4>
+              <h2>Learn about our <span class="lighter">Work Coulture</span> at MaxCoach </h2>
+              <p>Spend some time visit our website or head office and discover our current courses, enrollmente procedure, and registration deadline. We're opening new classes every biginning of each month.</p>
+              <span>Have questions?</span>
+              <a href="#">Get Free Guide<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+          <div id="wc-right">
+            <img id="greendots"src="img/greendots-x100.png" alt="greendots100">
+            <img id="coach" src="img/coach.jpg" alt="coach">
+            <img id="about" src="img/about.jpg" alt="about">
+            <img id="shape02" src="img/shape02.png" alt="shape02">
+          </div>
+          <div id="wc-down">
+            <div class="rates">
+              <h3>129+</h3>
+              <span>ENROLLED LEARNERS</span>
+            </div>
+            <div class="rates">
+              <h3>80</h3>
+              <span>FINISHED SESSIONS</span>
+            </div>
+            <div class="rates">
+              <h3>4%</h3>
+              <span>SATISFACTION RATE</span>
+            </div>
+          </div>
         </div>
 
       </section>
