inizio terza sezione

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
     <!--******************** PARTE CENTRALE ************* -->
     <main>
-      <!-- sezione work colture -->
+      <!-- PRIMA SEZIONE work colture -->
       <section id="work-colture" class="container">
         <div class="content-container">
+
           <div id="wc-left">
             <div class="text-sections">
               <h4>EVERYTHING IN <strong>MAXCOACH</strong></h4>
@@ -66,13 +67,15 @@
               <span>Have questions?</span>
               <a href="#">Get Free Guide<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
             </div>
-          </div>
+          </div><!--fine wc-left-->
+
           <div id="wc-right">
             <img id="greendots"src="img/greendots-x100.png" alt="greendots100">
             <img id="coach" src="img/coach.jpg" alt="coach">
             <img id="about" src="img/about.jpg" alt="about">
             <img id="shape02" src="img/shape02.png" alt="shape02">
-          </div>
+          </div><!--fine wc-right-->
+
           <div id="wc-down">
             <div class="rates">
               <h3>129+</h3>
@@ -86,12 +89,12 @@
               <h3>4%</h3>
               <span>SATISFACTION RATE</span>
             </div>
-          </div>
-        </div>
+          </div><!--fine wc-down-->
 
+        </div> <!--fine content-container-->
       </section>
 
-      <!-- sezione upgrade your life -->
+      <!-- SECONDA SEZIONE upgrade your life -->
       <section class="container">
         <div class="content-container">
 
@@ -99,10 +102,27 @@
 
       </section >
 
-      <!-- sezione courses con corousel-->
-      <section class="container">
+      <!-- TERZA SEZIONE courses con corousel-->
+      <section id="courses" class="container">
         <div class="content-container">
 
+          <div class="text-sections titolo">
+            <h4>JOIN MAXCOACH AT BEST</h4>
+            <h2>Latest Online <span class="lighter">Courses</span> </h2>
+          </div>
+
+          <div id="carousel">
+            <div class="card">
+
+            </div>
+            <div id="circle">
+
+            </div>
+          </div>
+
+          <div class="">
+            <p></p>
+          </div>
         </div>
 
       </section >
