--- a/index.html
+++ b/index.html
@@ -113,15 +113,43 @@
 
           <div id="carousel">
             <div class="card">
-
+              <img src="img/course02.jpg" alt="">
+              <div class="description">
+                <h3>$40.00</h3>
+                <h5>Learning to Write as a Professional Author</h5>
+                <span><i class="fa fa-file-text-o" aria-hidden="true"></i>20 Lessons</span>
+                <span><i class="fa fa-user-o" aria-hidden="true"></i>50 Students</span>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/course01.jpg" alt="">
+              <div class="description">
+                <h3>$0.00</h3>
+                <h5>Customer-centric Info-Tech Strategies</h5>
+                <span><i class="fa fa-file-text-o" aria-hidden="true"></i>24 Lessons</span>
+                <span><i class="fa fa-user-o" aria-hidden="true"></i>769 Students</span>
+              </div>
+            </div>
+            <div class="card">
+              <img src="img/course03.jpg" alt="">
+              <div class="description">
+                <h3>$19.00</h3>
+                <h5>Open Programming Courses for Everyone: Python</h5>
+                <span><i class="fa fa-file-text-o" aria-hidden="true"></i>17 Lessons</span>
+                <span><i class="fa fa-user-o" aria-hidden="true"></i>62 Students</span>
+              </div>
             </div>
             <div id="circle">
-
+              <i class="fas fa-circle-o active first"></i>
+              <i class="fas fa-circle-o"></i>
+              <i class="fas fa-circle-o"></i>
+              <i class="fas fa-circle-o last"></i>
             </div>
           </div>
 
-          <div class="">
-            <p></p>
+          <div class="moreinfo">
+            <p>Control your personal preference settings to get notified about appropriate courses.</p>
+            <span><a href="#"><strong>View all courses </strong><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
           </div>
         </div>
 
