--- a/index.html
+++ b/index.html
@@ -165,10 +165,20 @@
 
       </section >
 
-      <!-- sezione testimonials -->
-      <section class="container">
+      <!-- QUARTA SEZIONE testimonials -->
+      <section id="testimonials" class="container">
         <div class="content-container">
-
+          <div id="ts-left">
+            <div class="text-sections">
+              <h4>TESTIMONIALS</h4>
+              <h2>Why Do People <span class="lighter">*Hearts*</span> Us?</h2>
+              <p>Seeking for verbals of our service quality? Find them here. Everything is transparent and straightforward for your sense of jusitification</p>
+              <a href="#"><strong>View All</strong><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+          <div id="ts-right">
+            <img src="img/testimonials.png" alt="">
+          </div>
         </div>
 
       </section >
