--- a/index.html
+++ b/index.html
@@ -183,10 +183,23 @@
 
       </section >
 
-      <!-- sezione free guide -->
-      <section class="container">
-        <div class="content-container">
-
+      <!-- QUINTA SEZIONE team -->
+      <section id="team " class="container">
+        <div  class="content-container">
+          <div id="team-left">
+            <img id="phototeam" src="img/team.png" alt="">
+            <img id="shape07" src="img/shape07.png" alt="">
+            <img id="shape05" src="img/shape05.png" alt="">
+            <img id="shape01" src="img/shape01.png" alt="">
+          </div>
+          <div id="team-right">
+            <div class="text-sections">
+              <h4>EVERYTHING IN <strong>MAXCOACH</strong></h4>
+              <h2>We're Here To <span class="lighter">Transform</span> You!</h2>
+              <p>As learners, people can enjoy great companionship from MaxCoach mentors and educators. We can help you develop and grow at your best.</p>
+              <button type="button" name="button">Get Free Guide</button>
+            </div>
+          </div>
         </div>
 
       </section>
